[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-image-generator"
authors = [
    {name = "Atul", email = "atul@example.com"},
]
description = "A tool to generate images from text prompts using Stable Diffusion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "torch>=1.13.0,<3.0.0",
    "diffusers>=0.19.0,<1.0.0",
    "transformers>=4.30.0,<5.0.0",
    "accelerate>=0.18.0,<1.0.0",
    "safetensors>=0.3.0,<1.0.0",
    "pillow>=9.0.0,<11.0.0",
    "tqdm>=4.60.0,<5.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yourusername/text-to-image-generator"
Repository = "https://github.com/yourusername/text-to-image-generator"
"Bug Tracker" = "https://github.com/yourusername/text-to-image-generator/issues"

[project.scripts]
text2image = "generate:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"